--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,7 +76,7 @@
         <a href="/konfidencialnost/">Конфиденциальность</a>
       </div>
       <div class="col-9 copyright col-mb-12">
-        <span>© 2000 — 2018 «Авиакомпания «Белавиа»</span>
+        <span>© 2000 — 2018 «Авиакомпания «ClearAir»</span>
       </div>
     </div>
   </div>
