This is the biggest mistake in my life

--- a/src/app/components/login-popup/login-popup.component.html
+++ b/src/app/components/login-popup/login-popup.component.html
@@ -1,14 +1,15 @@
 <div class="login">
   <h3>Enter you credentials</h3>
   <mat-form-field>
-    <input matInput placeholder="Login">
+    <input matInput [(ngModel)]="formData.username" placeholder="Login">
   </mat-form-field>
   <mat-form-field>
-    <input matInput placeholder="Enter your password" [type]="hide ? 'password' : 'text'">
+    <input matInput [(ngModel)]="formData.password" placeholder="Enter your password"
+           [type]="hide ? 'password' : 'text'">
     <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
   </mat-form-field>
   <div>
-    <button mat-button>Login</button>
+    <button mat-button (click)="onLogin()">Login</button>
     <span class="example-fill-remaining-space"></span>
     <button mat-button routerLink="registration" (click)="close()">Registration</button>
   </div>
