--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,7 +8,9 @@ footer {
   background-color: #f5f5f5;
 }
 
-.top-footer {
+.logo {
+  text-decoration: none;
+  color: white;
 }
 
 .bottom-footer {
