--- a/src/app/components/login-popup/login-popup.component.html
+++ b/src/app/components/login-popup/login-popup.component.html
@@ -1,17 +1,17 @@
 <div class="login">
-  <h3>Enter you credentials</h3>
+  <h3>{{'credentials' | translate}}</h3>
   <mat-form-field>
-    <input matInput [(ngModel)]="formData.username" placeholder="Login">
+    <input matInput [(ngModel)]="formData.username" placeholder="{{'username' | translate}}">
   </mat-form-field>
   <mat-form-field>
-    <input matInput [(ngModel)]="formData.password" placeholder="Enter your password"
+    <input matInput [(ngModel)]="formData.password" placeholder="{{'enter_you_password' | translate}}"
            [type]="hide ? 'password' : 'text'">
     <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
   </mat-form-field>
   <div>
-    <button mat-button (click)="onLogin()">Login</button>
+    <button mat-button (click)="onLogin()">{{'login' | translate}}</button>
     <span class="example-fill-remaining-space"></span>
-    <button mat-button routerLink="registration" (click)="close()">Registration</button>
+    <button mat-button routerLink="registration" (click)="close()">{{'registration' | translate}}</button>
   </div>
 </div>
 
